5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4326/executions/1668_2967.log
== TEST (2019-04-15 19:19:56) 
-- CODE:
a=float(input("Digite A sua altura"))
b=float(input("Digite A altura do seu amigo"))
if (a >1.37):
	print(Sim)
	
else(b >1.37):
	print(Nao)
-- ERROR:
File "XXXX", line 6
    else(b >1.37):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:20:09) 
-- CODE:
a=float(input("Digite A sua altura"))
b=float(input("Digite A altura do seu amigo"))
if (a >1.37):
	print(Sim)
	
else(b <1.37):
	print(Nao)
-- ERROR:
File "XXXX", line 6
    else(b <1.37):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:22:42) 
-- CODE:
a=float(input("Digite A sua altura"))
b=float(input("Digite A altura do seu amigo"))
if (a >,b<==1.37):
	print(Sim)
	
else(b <1.37):
	print(Nao)
-- ERROR:
File "XXXX", line 3
    if (a >,b<==1.37):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:23:05) 
-- CODE:
a=float(input("Digite A sua altura"))
b=float(input("Digite A altura do seu amigo"))
if (a >1.37):
	print(Sim)
	

-- ERROR:
File "XXXX", line 3
    if (a >,b<==1.37):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:23:53) 
-- CODE:
a=float(input("Digite A sua altura"))

if (a >1.37):
	print(Sim)
	

-- ERROR:
File "XXXX", line 3
    if (a >,b<==1.37):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:24:01) 
-- CODE:
a=float(input("Digite A sua altura:"))

if (a >1.37):
	print(Sim)
	

-- ERROR:
File "XXXX", line 3
    if (a >,b<==1.37):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:24:56) 
-- CODE:
a=float(input("Digite A sua altura:"))

if (a >1.37):
	Altura=(Sim)
	print(Altura)
	

-- EXECUTION TIME:
0.238858
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:

-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:

-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:25:01) 
-- CODE:
a=float(input("Digite A sua altura:"))

if (a >1.37):
	Altura=(Sim)
	print(Altura)
	

-- ERROR:
File "XXXX", line 3
    if (a >,b<==1.37):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:26:45) 
-- CODE:
a=float(input("Digite A sua altura"))
b=float(input("Digite A altura do seu amigo"))
if (a >1.37):
	Altura =(Sim)
	print(Altura)
	
else(b <1.37):
	print(Nao)
-- ERROR:
File "XXXX", line 7
    else(b <1.37):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:27:10) 
-- CODE:
a=float(input("Digite A sua altura"))
b=float(input("Digite A altura do seu amigo"))
if (a >1.37):
	Altura =(Sim)
	print(Altura)
	
else:
	print(Nao)
-- EXECUTION TIME:
0.131169
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2967/main.py", line 8, in <module>
    print(Nao)
NameError: name 'Nao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:27:14) 
-- CODE:
a=float(input("Digite A sua altura"))
b=float(input("Digite A altura do seu amigo"))
if (a >1.37):
	Altura =(Sim)
	print(Altura)
	
else:
	print(Nao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(Nao)
NameError: name 'Nao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:27:33) 
-- CODE:
a=float(input("Digite A sua altura:"))
b=float(input("Digite A altura do seu amigo:"))
if (a >1.37):
	Altura =(Sim)
	print(Altura)
	
else:
	print(Nao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(Nao)
NameError: name 'Nao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:28:14) 
-- CODE:
a=float(input("Digite A sua altura:"))
b=float(input("Digite A altura do seu amigo:"))
if (a >1.37):
	Altura =(Sim):
	print(Altura)
	
else:
	print(Nao)
-- ERROR:
File "XXXX", line 4
    Altura =(Sim):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:28:28) 
-- CODE:
a=float(input("Digite A sua altura:"))
b=float(input("Digite A altura do seu amigo:"))
if (a >1.37):
	Altura =(Sim):
	print(Altura):
	
else:
	print(Nao)
-- ERROR:
File "XXXX", line 4
    Altura =(Sim):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:30:23) 
-- CODE:
a=float(input("Digite A sua altura:"))
b=float(input("Digite A altura do seu amigo:"))
if (a > 1.37< b):
	Altura =(Sim)
	print(Altura)
	
else(b <1.37):
	print(Nao)
-- ERROR:
File "XXXX", line 7
    else(b <1.37):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:30:39) 
-- CODE:
a=float(input("Digite A sua altura:"))
b=float(input("Digite A altura do seu amigo:"))
if (a > 1.37< b):
	Altura =(Sim)
	print(Altura)
	

-- ERROR:
File "XXXX", line 7
    else(b <1.37):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:32:20) 
-- CODE:
a=float(input("Digite A sua altura:"))
b=float(input("Digite A altura do seu amigo:"))
if (a > 1.37< b):
	a,b =(Sim)
	print(Altura)
	
else(b <1.37):
	print(Nao)
-- ERROR:
File "XXXX", line 7
    else(b <1.37):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:32:51) 
-- CODE:
a=float(input("Digite A sua altura:"))
b=float(input("Digite A altura do seu amigo:"))
if (a > 1.37< b):
	a,b =(Sim)
	print(Altura)
	

-- ERROR:
File "XXXX", line 7
    else(b <1.37):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:37:03) 
-- CODE:
a=float(input("Digite A sua altura:"))
b=float(input("Digite A altura do seu amigo:"))

if (a > 1.37):
	a =(Sim)
	print(a)
	

-- ERROR:
File "XXXX", line 7
    else(b <1.37):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:38:44) 
-- CODE:
a=float(input("Digite A sua altura:"))
b=float(input("Digite A altura do seu amigo:"))

if (a > 1.37,-b):
	a =(Sim)
	print(a)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a =(Sim)
NameError: name 'Sim' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:39:58) 
-- CODE:
a=float(input("Digite A sua altura:"))
b=float(input("Digite A altura do seu amigo:"))

if (a > 1.37,-b):
	a =(Sim)
	print(a)
else :
	print(Nao)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a =(Sim)
NameError: name 'Sim' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:40:03) 
-- CODE:
a=float(input("Digite A sua altura:"))
b=float(input("Digite A altura do seu amigo:"))

if (a > 1.37,-b):
	a =(Sim)
	print(a)
else :
	print(Nao)
	

-- EXECUTION TIME:
0.15793
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2967/main.py", line 5, in <module>
    a =(Sim)
NameError: name 'Sim' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
